Improve path parameter validation
This change adds support for validating path
parameters and query parameters separately
also on pages router using the `params` and
´query´ schemas similarly as with app router.

This also adds support for Zod's `describe` method
so that the schema descriptions are included the
OpenAPI spec.
